Bug 1046814 - Propertly set the MediaDecoderStateMachine parameters after its initialization when using a MediaSourceDecoder. r=kinetik